#
# This file is part of bgpstream
#
# Copyright (C) 2015 The Regents of the University of California.
# Authors: Alistair King, Chiara Orsini
#
# All rights reserved.
#
# This code has been developed by CAIDA at UC San Diego.
# For more information, contact bgpstream-info@caida.org
#
# This source code is proprietary to the CAIDA group at UC San Diego and may
# not be redistributed, published or disclosed without prior permission from
# CAIDA.
#
# Report any bugs, questions or comments to bgpstream-info@caida.org
#

SUBDIRS = common lib tools test docs

AM_CPPFLAGS =

EXTRA_DIST = 	test/sqlite_test.db \
		test/csv_test.csv \
		test/tutorial.c \
		test/routeviews.route-views.jinx.ribs.1427846400.bz2 \
		test/routeviews.route-views.jinx.updates.1427846400.bz2 \
		test/ris.rrc06.updates.1427846400.gz \
		test/ris.rrc06.ribs.1427846400.gz

include_HEADERS =


ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
